styles.css
* {
	padding: 0;
	margin: 0;
	overflow: hidden;
	font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}

#container {
	display: grid;
	height: 100vh;
	width: 100vw;
	grid-template: 2fr 5fr / 1.5fr 5fr;
}

#header {
	display: grid;
	grid-template: repeat(3, 1fr) / repeat(20, 1fr);
	background-color: white;
	align-items: center;
	justify-content: center;

}

#search-icon {
	justify-self: end;
}

input {
	background-color: #DBD9DB;
	border-radius: 20px;
	border: none;
	height: 20px;
	grid-area: 1 / 2 / 2 / 11;
}

#notification-icon {
	grid-area: 1 / 16 / 2 / 17;
	justify-self: end;
}

#profile-icon {
	grid-area: 1 / 17 / 2 / 18;
	justify-self: end;
}

#user-name {
	grid-area: 1 / 18 / 2 / 20;
	font-size: 15px;
	justify-self: start;
	align-self: center;
}

#big-profile-icon {
	grid-area: 2 / 1 / 4 / 3;
	height: 60px;
	width: 70px;
	place-self: center;
}

p {
	grid-area: 2 / 3 / 3 / 5;
	align-self: center;
	font-size: 12px;
}

h4 {
	grid-area: 3 / 3 / 4 / 7;
	align-self: start;
}


#header .icon {
	height: 20px;	
	width: 20px;
	padding: 20px;
	justify-content: right;
}


button {
	background-color: #45503B;
	height: 30px;
	width: 80px;
	padding: 5px;
	color: white;
	border-radius: 15px;
	font-size: 12px;
}

#new {
	grid-area: 2 / 14 / 4 / 16;
	justify-self: end;
}

#upload {
	grid-area: 2 / 16 / 4 / 18;
	justify-self: end;
}

#share {
	grid-area: 2 / 18 / 4 / 20;
	justify-self: end;
}


#sidebar {
	display: grid;
	grid-template: 1fr 3fr .5fr 1.5fr 1.5fr / 1fr;
	background-color: #45503B;
	grid-area: 1 / 1 / 3 / 2;
	color: white;
	padding: 20px;

}

#sidebar-heading {
	display: grid;
	grid-template: 1fr 1fr / 1fr 3fr;
}

#logo-icon {
	grid-area: 1 / 1 / 2 / 2;
	filter: invert(100%);	
	height: 50px;
	width: 50px;
	justify-self: center;

}

#dashboard {
	grid-area: 1 / 2 / 2 / 5;
	align-self: center;
	
}

#sidebar-menu-top {rid;
	display: grid;
	grid-area: 2 / 1 / 3 / 2;
	grid-template: repeat(6, 1fr) / 1fr 3fr;
	grid-auto-flow: column;
}

#sidebar-menu-bottom {
	display: grid;
	grid-area: 4 / 1 / 5 / 2;
	grid-template: repeat(3, 1fr) / 1fr 3fr;
	grid-auto-flow: column;
}

#sidebar .icon {	
	height: 20px;
	width: 20px;
	filter: invert(100%);
	place-self: center;	
	
}

a {
	color: white;
	text-decoration: none;
	align-self: center;
}


/* #main-content {
	background-color: #DBD9DB;
	grid-area: 2 / 2 / 3 / 3;
} */

